--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -82,8 +82,8 @@
     <TextView
         android:id="@+id/tv_status_message"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="8dp"
         android:textColor="#FFFFFF"
         android:textSize="24sp"
         android:textStyle="bold"
